src/objects/Weekly_Snapshot_CQ_Channel2__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Forecasted_Bookings__c</fullName>
        <label>Forecasted Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group_Owner_Team__c</fullName>
        <label>Group^Owner Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team_Group_Buckets__c</fullName>
        <formula>LEFT(Group_Owner_Team__c, FIND( &quot;^&quot;,Group_Owner_Team__c )-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Team (Group Buckets)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <formula>RIGHT(Group_Owner_Team__c, LEN(Group_Owner_Team__c)- FIND( &quot;^&quot;,Group_Owner_Team__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Weekly Snapshot CQ Channel</label>
    <nameField>
        <label>Weekly Snapshot CQ Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weekly Snapshots CQ Channel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>